recursion.logo.spiral.SpiralUse.scala.error
Compilation error:
SpiralUse:3: error: type mismatch;
 found   : Double(0.5)
 required: Int
    spiral(1000,91,1,0.5);
                     ^